
Discretization improvements
---------------------------
- Added support for GSLIB-FindPoints, a general high-order interpolation utility
  that can robustly evaluate a GridFunction in an arbitrary collection of points
  in physical space. See INSTALL for details on building MFEM with GSLIB, and
  miniapps/gslib for examples of how to use this feature.

- Added support for serendipity elements of arbitrary order on affinely-mapped
  square elements. Basis functions for these elements can be visualized using
  an option in the display-basis miniapp.

- Added support for complex-valued finite element operators and fields using a
  2x2 block structured linear system to mimic complex arithmetic. New classes
  include: ComplexGridFunction, SesquilinearForm, ComplexLinearForm, and their
  parallel counterparts.

- Two integrators related to Stokes problems, (Q grad u, v) and (Q div v, u),
  where u and the components of v are in H1, were added/modified to support full
  and partial assembly modes. See the new GradientIntegrator and the updated
  VectorDivergenceIntegrator classes in fem/bilininteg.hpp, as well as the PA
  kernels in fem/bilininteg_gradient.cpp and fem/bilininteg_divergence.cpp.

- Diagonals of partially assembled operators can now be computed efficiently.
  See the new methods AssembleDiagonal in BilinearForm, AssembleDiagonalPA in
  BilinearFormIntegrator and the implementations in fem/bilininteg_*.cpp.

- Added initial support for NonlinearForms to support the partial assembly mode.

- Added a nonlinear vector valued convection integrator (Q u \cdot grad u, v)
  where u_i and v_i are in H1. This form occurs e.g. in the Navier-Stokes
  equations. The integrator supports the partial assembly mode for its
  action. In full assembly mode we also provide the GetGradient method that
  computes the linearized version of the integrator.

- Added a new method, MixedBilinearForm::FormRectangularLinearSystem, that can